[package]
name = "jawbreaker"
version = "0.1.0"
edition = "2021"
authors = ["@backuardo"]

[dependencies]
anyhow = "1.0.95"
num_cpus = "1.16.0"
rayon = "1.10.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
trust-dns-resolver = "0.23.2"
