[package]
name = "jawbreaker"
version = "0.1.0"
edition = "2021"
authors = ["@backuardo"]

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
fastrand = "2.3.0"
futures = "0.3.31"
futures-util = "0.3.31"
num_cpus = "1.16.0"
rayon = "1.10.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
trust-dns-resolver = {version = "0.23.2", features = ["tokio-runtime"]}
